[project]
name = "representations"
version = "0.1.0"
description = ""
readme = "README.md"

dependencies = [
  "debugpy>=1.8.11",
  "geoopt",
  "jaxtyping>=0.2.36",
  "jupyterlab>=4.3.3",
  "tensorboard>=2.18.0",
  "timm>=1.0.12",
  "torch>=2.5.1",
  "torchvision>=0.20.1",
]

[tool.uv]
environments = ["platform_system == 'Linux'"]

[tool.uv.sources]
geoopt = { git = "https://github.com/geoopt/geoopt.git" }

[tool.ruff]
line-length = 99
indent-width = 4

[tool.ruff.lint]
ignore = ["E402"]